<resources>
    <string name="app_name">MyLMK-App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_myngaji">Ngaji Saya</string>
    <string name="title_dashboard">Beranda</string>
    <string name="title_myprofile">Profil Saya</string>

    <string name="program">Program LMK</string>
    <string name="list_tutor">Daftar Guru LMK</string>
    <string name="register_student">Daftar Sebagai Murid Baru</string>
    <string name="about_us">Tentang Kami</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="logout">Logout</string>
    <string name="program_description">Teks Deskripsi</string>

    //Note
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="menu_newest">Newest</string>
    <string name="menu_oldest">Oldest</string>
    <string name="manu_random">Random</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abdl">Muhamad Abdul Aziz</string>
    <string name="email">NIM. 20170810069</string>
    <string name="kompetensi"><u>Guru Ngaji</u></string>
</resources>