<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.abdl.mylmk_app.ui.home.HomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_ngaji"
        android:name="com.abdl.mylmk_app.ui.ngaji.NgajiFragment"
        android:label="@string/title_myngaji"
        tools:layout="@layout/fragment_ngaji" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.abdl.mylmk_app.ui.profile.ProfileFragment"
        android:label="@string/title_myprofile"
        tools:layout="@layout/fragment_profile" />
</navigation>