<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lmk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="LMK" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="2dp"
                android:paddingEnd="20dp"
                android:paddingBottom="2dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_program"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:text="@string/program"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:src="@drawable/ic_round_keyboard_arrow_right_24" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="2dp"
                android:paddingEnd="20dp"
                android:paddingBottom="2dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_list_guru"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:text="@string/list_tutor"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:src="@drawable/ic_round_keyboard_arrow_right_24" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="2dp"
                android:paddingEnd="20dp"
                android:paddingBottom="2dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_daftar_murid"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:text="@string/register_student"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:src="@drawable/ic_round_keyboard_arrow_right_24" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="2dp"
                android:paddingEnd="20dp"
                android:paddingBottom="2dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_tentang_lmk"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:text="@string/about_us"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:src="@drawable/ic_round_keyboard_arrow_right_24" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>